# varona

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ci-requirements.txt
.github/workflows/: cli-test.yml  codecov.yml  deploy.yml  docker-deploy.yml  pages.yml  pypi-deploy.yml  unittest.yml
docs/: Makefile  redir_main.html  wrangler.toml
docs/source/: api.rst  conf.py  design.rst  goal.rst  index.rst  installation.rst  modules.rst  repo.rst  usage.rst  varona.bcftools.rst  varona.cli.rst  varona.data.rst  varona.dataframe.rst  varona.ensembl.rst  varona.enum.rst  varona.extract.rst  varona.fake_vcf.rst  varona.maf.rst  varona.platypus.rst  varona.rst  varona.utils.cli_split.rst  varona.utils.fix_vcf.rst  varona.utils.misc.rst  varona.utils.rst  varona.utils.split.rst  varona.varona.rst
docs/source/_static/: custom.js  fa.css
docs/source/_templates/: versions.html
src/varona/: __init__.py  __main__.py  __version__.py  bcftools.py  bcftools_test.py  cli.py  cli_test.py  dataframe.py  dataframe_test.py  ensembl.py  ensembl_test.py  enum.py  enum_test.py  extract.py  extract_test.py  fake_vcf.py  fake_vcf_test.py  maf.py  maf_test.py  platypus.py  platypus_test.py  varona.py  varona_test.py  verona.py
src/varona/data/: __init__.py  grch38.fasta.fai
src/varona/utils/: __init__.py  cli_split.py  cli_split_test.py  cli_vcf_split.py  cli_vcf_split_test.py  fix_vcf.py  misc.py  misc_test.py  split.py  split_test.py
src/verona/: __init__.py  bcftools.py  bcftools_test.py  cli.py  ensembl.py  ensembl_test.py  extract.py  extract_test.py  fake_vcf.py  fake_vcf_test.py  maf.py  maf_test.py  vcf_data.py  verona.py
src/verona/data/: __init__.py
