[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varona"
authors = [{ name = "Andy Pohl", email = "andy@pohl.io" }]
description = "VCF file annotation tool"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["version", "readme"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = ["httpx", "polars", "pysam"]

[project.scripts]
varona = "varona.cli:main"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
test = ["coverage"]
building = ["wheel", "twine", "setuptools", "build"]
dev = ["varona[docs]", "varona[test]", "varona[building]", "black"]

[tool.setuptools.dynamic]
version = { file = "src/varona/__VERSION__" }
readme = { file = "README.md" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
varona = ["__VERSION__"]
"verona.data" = ["human_g1k_v37.fasta.fai"]
