[metadata]
name = verona
version = 0.0.1
description = VCF file annotation tool
author = Andy Pohl
author_email = andy@pohl.io
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    =src
install_requires =
    pysam
    polars

[options.packages.find]
where=src
