[metadata]
name = verona
description = VCF file annotation tool
author = Andy Pohl
author_email = andy@pohl.io
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    =src
install_requires =
    httpx
    polars
    pysam

[options.packages.find]
where=src

[options.package_data]
verona.data =
    human_g1k_v37.fasta.fai
